Fix social media links

--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ author:
   github:       http://github.com/dutertetimes
   email:        dutertetimes@gmail.com
   twitter:      dutertetimes
-  youtube:      https://www.youtube.com/channel/UCLVSH-SgxfD5JE43ypNiYqg
-  #wordpress:    http://dutertetimes.wordpress.com/
+  youtube:      https://www.youtube.com/channel/UCLVSH-SgxfD5JE43ypNiYqg?sub_confirmation=1
+  #wordpress:   http://dutertetimes.wordpress.com/
 
 defaults:
   -
