Use filename as permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ baseurl: ""
 relative_permalinks: false
 
 # Outputting
-permalink:     date
+permalink:     none
 paginate_path: /page:num
 timezone:      null
 
