--- a/_data/format.yml
+++ b/_data/format.yml
@@ -1,3 +1,3 @@
 long:      "%a %b %d, %Y %I:%M %p %Z"
-same_year: "%a %b %d %I:%M %p %Z"
+same_year: "%a %d %b %I:%M %p %Z"
 same_day:  "%I:%M %p %Z"
