--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,19 @@ author:
   name:         'dutertetimes'
   url:          http://dutertetimes.github.io/
   github:       http://github.com/dutertetimes
-  email:        dutertetimes@gmail.com
-  twitter:      dutertetimes
-  youtube:      https://www.youtube.com/channel/UCLVSH-SgxfD5JE43ypNiYqg?sub_confirmation=1
+  social_media:
+    - name:     Email
+      address:  dutertetimes@gmail.com
+      link:     mailto:dutertetimes@gmail.com
+      target:   
+    - name:     Twitter
+      address:  dutertetimes
+      link:     https://twitter.com/dutertetimes
+      target:   _blank
+    - name:     YouTube
+      address:  https://www.youtube.com/channel/UCLVSH-SgxfD5JE43ypNiYqg?sub_confirmation=1
+      link:     https://www.youtube.com/channel/UCLVSH-SgxfD5JE43ypNiYqg?sub_confirmation=1
+      target:   _blank
   #wordpress:   http://dutertetimes.wordpress.com/
 
 defaults:
