Move out url to root

--- a/_config.yml
+++ b/_config.yml
@@ -66,11 +66,11 @@ sass:
 title:          "Duterte Times"
 tagline:        ""
 description:    "Alternative Philippine news."
+url:            https://dutertetimes.github.io/
 
 author:
   name:         'dutertetimes'
   icon:         duterte_times_twitter_summary_card_01.png
-  url:          http://dutertetimes.github.io/
   github:       http://github.com/dutertetimes
   social_media:
     - name:     Email
