Add license attribution link

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,4 +2,4 @@ cc_by_sa: http://creativecommons.org/licenses/by-sa/4.0/
 cc_by_sa_image: https://i.creativecommons.org/l/by-sa/4.0/88x31.png
 cc_by_sa_license: http://creativecommons.org/licenses/by-sa/4.0/
 creative_commons: https://creativecommons.org/
-attribution: 
+attribution: https://wiki.creativecommons.org/wiki/Best_practices_for_attribution
