--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ sass:
 
 # Setup
 title:          "Duterte Times"
-tagline:        ""
-description:    "Alternative Philippine news."
+tagline:        "The Times, they are a-changin'"
+description:
 url:            https://dutertetimes.github.io/
 
 author:
