Correct letter case of tag line

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ sass:
 
 # Setup
 title:          "Duterte Times"
-tagline:        "The Times, they are a-changin'"
+tagline:        "The times, they are a-changin'"
 description:
 url:            https://dutertetimes.github.io/
 
