--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ data_dir:    ./_data
 # Handling Reading
 redirects:    yes
 safe:         false
-include:      [".htaccess"]
+include:      [".htaccess", "_pages"]
 exclude:      []
 keep_files:   [".git", ".svn"]
 encoding:     "utf-8"
