Add law collection and landing pages

--- a/_config.yaml
+++ b/_config.yaml
@@ -100,3 +100,7 @@ collections:
     output: true
     permalink: /:collection/:path
     title: Organization
+  law:
+    output: true
+    permalink: /:collection/:path
+    title: Law
