--- a/_config.yaml
+++ b/_config.yaml
@@ -100,6 +100,10 @@ collections:
     output: true
     permalink: /:collection/:path
     title: Organization
+  gov:
+    output: true
+    permalink: /:collection/:path
+    title: Government
   law:
     output: true
     permalink: /:collection/:path
