Add sources folder to collection to be generated

--- a/_config.dev.yaml
+++ b/_config.dev.yaml
@@ -23,4 +23,8 @@ collections:
     output: true
     permalink: /:collection/:path
     title: Map
+  sources:
+    output: true
+    permalink: /:collection/:path
+    title: Sources
     
