--- a/_config.yaml
+++ b/_config.yaml
@@ -88,25 +88,25 @@ defaults:
     values:
       layout:   "post"
 
-collections:
-  top:
-    output:    true
-    permalink: /news/top/:collection/:path
-  articles:
-    output:    true
-    permalink: /news/articles/:collection/:path
-  sections:
-    output:    true
-    permalink: /news/sections/:collection/:path
-  people:
-    output:    true
-    permalink: /info/people/:collection/:path
-  org:
-    output:    true
-    permalink: /info/org/:collection/:path
-  gov:
-    output:    true
-    permalink: /info/gov/:collection/:path
+#collections:
+#  top:
+#    output:    true
+#    permalink: /news/top/:collection/:path
+#  articles:
+#    output:    true
+#    permalink: /news/articles/:collection/:path
+#  sections:
+#    output:    true
+#    permalink: /news/sections/:collection/:path
+#  people:
+#    output:    true
+#    permalink: /info/people/:collection/:path
+#  org:
+#    output:    true
+#    permalink: /info/org/:collection/:path
+#  gov:
+#    output:    true
+#    permalink: /info/gov/:collection/:path
     
 # Custom vars
 version:        0.1.0
