Comment out unused collections

--- a/_config.dev.yaml
+++ b/_config.dev.yaml
@@ -3,16 +3,15 @@ development: true
 
 
 collections:
-  law:
-    output: true
-    permalink: /info/law/:collection/:path
-    title: Law
+#  law:
+#    output: true
+#    permalink: /info/law/:collection/:path
+#    title: Law
 #  map:
 #    output: true
 #    permalink: /:collection/:path
 #    title: Map
-  sources:
-    output: true
-    permalink: /info/sources/:collection/:path
-    title: Sources
-    
+#  sources:
+#    output: true
+#    permalink: /info/:collection/:path
+#    title: Sources
