--- a/_data/links.yml
+++ b/_data/links.yml
@@ -26,3 +26,5 @@ cc_by_sa_license: http://creativecommons.org/licenses/by-sa/4.0/
 creative_commons: https://creativecommons.org/
 attribution: https://wiki.creativecommons.org/wiki/Best_practices_for_attribution
 
+weather_satellite_image: http://www.goes.noaa.gov/sohemi/PHILIR.JPG
+
