Use smaller site favicon and twitter image

--- a/_config.yaml
+++ b/_config.yaml
@@ -71,7 +71,7 @@ image_source:   https://dl.dropboxusercontent.com/u/47611946/dutertetimes
 
 author:
   name:         'dutertetimes'
-  icon:         duterte_times_twitter_summary_card_01.png
+  icon:         dutertetimes.png
   github:       http://github.com/dutertetimes
   #wordpress:   http://dutertetimes.wordpress.com/
 
