--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ _drafts/**
 _site
 _sass/*.map
 news/*.md
+news/.sass-cache/**
 _includes/.sass-cache/**
 _posts/.sass-cache/**
 _sass/.sass-cache/**
