--- a/_config.yaml
+++ b/_config.yaml
@@ -68,7 +68,7 @@ sass:
 # Setup
 title:          "Duterte Times"
 tagline:        "The times, they are a-changin'"
-description:    "Philippines alternative social news website"
+description:    "Philippine alternative social news website"
 url:            https://dutertetimes.github.io/
 image_source:   https://dl.dropboxusercontent.com/u/47611946/dutertetimes
 
