--- a/_config.yaml
+++ b/_config.yaml
@@ -7,7 +7,7 @@ data_dir:    ./_data
 redirects:    yes
 safe:         false
 include:      [".htaccess", "_pages"]
-exclude:      []
+exclude:      [./_drafts/]
 keep_files:   [".git", ".svn"]
 encoding:     "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
