Fix image paths

--- a/_config.yaml
+++ b/_config.yaml
@@ -69,7 +69,7 @@ sass:
 title:          "Duterte Times"
 tagline:        "The times, they are a-changin'"
 description:    "Philippine alternative social news website"
-url:            https://dutertetimes.github.io/
+url:            https://dutertetimes.github.io
 image_source:   https://dl.dropboxusercontent.com/u/47611946/dutertetimes
 
 author:
