Refactor info "block" include files

--- a/_data/government.yml
+++ b/_data/government.yml
@@ -1,3 +1,5 @@
+# http://www.comelec.gov.ph/?r=References/Links/linksgovph
+
 title:        Government of the Republic of the Philippines
 description: "The Philippines is a republic with a presidential form of government wherein power is equally divided among its three branches: executive, legislative, and judicial. One basic corollary in a presidential system of government is the principle of separation of powers wherein legislation belongs to Congress, execution to the Executive, and settlement of legal controversies to the Judiciary."
 level:       1
@@ -10,14 +12,14 @@ links:
 branch:
   - title: Executive
     description: "The Executive branch is composed of the President and the Vice President who are elected by direct popular vote and serve a term of six years. The Constitution grants the President authority to appoint his Cabinet. These departments form a large portion of the country’s bureaucracy."
-    link: /info/gov/executive/
+    url: /info/gov/executive/
     heads:
       - title: President
         head: Rodrigo Roa Duterte
-        description: 
+        description:
       - title: Vice President
         head: Maria Leonor Santo Tomas Robredo
-        description: 
+        description:
     departments:
       - title: Executive Secretary
         abbr: ES
@@ -111,11 +113,11 @@ branch:
         abbr: CHED
         head: Patricia Licuanan
         url: http://www.ched.gov.ph/
-        
+
     cabinet_level:
       - title: Housing and Urban Development Coordinating Council
         abbr: HUDCC
-        head: 
+        head:
         url: http://hudcc.net/
       - title: National Economic and Development Authority
         abbr: NEDA
@@ -124,7 +126,7 @@ branch:
       - title: Presidential Communications Office
         abbr: PCO
         head: Martin Andanar
-        url: 
+        url:
       - title: National Security Council
         abbr: NSC
         head: Hermogenes Cendaña Esperon, Jr.
@@ -132,15 +134,15 @@ branch:
       - title: Office of the Cabinet Secretary
         abbr: OCS
         head: Leoncio Badilla Evasco Jr.
-        url: 
+        url:
       - title: Presidential Management Staff
         abbr: PMS
         head: Christopher Lawrence Tesoro Go
-        url: 
+        url:
       - title: Office of the Chief Presidential Legal Counsel
         abbr: OCPLC
         head: Salvador San Buenaventura Panelo
-        url: 
+        url:
       - title: Metropolitan Manila Development Authority
         abbr: MMDA
         head: Thomas Muñoz Orbos
@@ -172,195 +174,195 @@ branch:
 
   - title: Legislative
     description: "The Legislative branch is authorized to make laws, alter, and repeal them through the power vested in the Philippine Congress. This institution is divided into the Senate and the House of Representatives."
-    link: /info/gov/legislative/
+    url: /info/gov/legislative/
     heads:
       - title: Senate President
         head: Aquilino Pimentel
-        description: 
+        description:
       - title: Speaker of the House of Representatives
         head: Pantaleon Alvarez
-        description: 
+        description:
     committees:
       - title: Accountability of Public Officers and Investigations
-        abbr: 
+        abbr:
         head: Richard J. Gordon
-        url: 
+        url:
       - title: Accounts
-        abbr: 
+        abbr:
         head: Panfilo M. Lacson
-        url: 
+        url:
       - title: Agrarian Reform
-        abbr: 
+        abbr:
         head: Alan Peter S. Cayetano
-        url: 
+        url:
       - title: Agriculture and Food
-        abbr: 
+        abbr:
         head: Francis Pangilinan
-        url: 
+        url:
       - title: Banks, Financial Institutions and Currencies
-        abbr: 
+        abbr:
         head: Francis G. Escudero
-        url: 
+        url:
       - title: Civil Service, Government Reorganization and Professional Regulation
-        abbr: 
+        abbr:
         head: Antonio F. Trillanes IV
-        url: 
+        url:
       - title: Climate Change
-        abbr: 
+        abbr:
         head: Loren B. Legarda
-        url: 
+        url:
       - title: Constitutional Amendments and Revision of Codes
-        abbr: 
+        abbr:
         head: Franklin M. Drilon
-        url: 
+        url:
       - title: Cooperatives
         abbr: Juan Miguel F. Zubiri
-        head: 
-        url: 
+        head:
+        url:
       - title: Cultural Communities
-        abbr: 
+        abbr:
         head: Maria Lourdes Nancy S. Binay
-        url: 
+        url:
       - title: Economic Affairs
-        abbr: 
+        abbr:
         head: Sherwin T. Gatchalian
-        url: 
+        url:
       - title: Education, Arts and Culture
-        abbr: 
+        abbr:
         head: Paolo Benigno A. Aquino IV
-        url: 
+        url:
       - title: Electoral Reforms and Peoples' Participation
-        abbr: 
+        abbr:
         head: Leila M. De Lima
-        url: 
+        url:
       - title: Energy
-        abbr: 
+        abbr:
         head: Sherwin T. Gatchalian
-        url: 
+        url:
       - title: Environment and Natural Resources
-        abbr: 
+        abbr:
         head: Cynthia A. Villar
-        url: 
+        url:
       - title: Ethic and Privileges
-        abbr: 
+        abbr:
         head: Vicente C. Sotto III
-        url: 
+        url:
       - title: Finance
-        abbr: 
+        abbr:
         head: Loren B. Legarda
-        url: 
+        url:
       - title: Foreign Relations
-        abbr: 
+        abbr:
         head: Alan Peter S. Cayetano
-        url: 
+        url:
       - title: Games and Amusement
-        abbr: 
+        abbr:
         head: Panfilo M. Lacson
-        url: 
+        url:
       - title: Government Corporations and Public Enterprises
-        abbr: 
+        abbr:
         head: Richard J. Gordon
-        url: 
+        url:
       - title: Health and Demography
-        abbr: 
+        abbr:
         head: Ana Theresia Hontiveros-Baraquel
-        url: 
+        url:
       - title: Justice and Human Rights
-        abbr: 
+        abbr:
         head: Richard J. Gordon
-        url: 
+        url:
       - title: Labor, Employment and Human Resource Development
-        abbr: 
+        abbr:
         head: Joel Villanueva
-        url: 
+        url:
       - title: Local Government
-        abbr: 
+        abbr:
         head: Juan Edgardo M. Angara
-        url: 
+        url:
       - title: National Defense and Security
-        abbr: 
+        abbr:
         head: Gregorio B. Honasan II
-        url: 
+        url:
       - title: Peace, Unification and Reconciliation
-        abbr: 
+        abbr:
         head: Gregorio B. Honasan II
-        url: 
+        url:
       - title: Public Information and Mass Media
-        abbr: 
+        abbr:
         head: Grace Poe
-        url: 
+        url:
       - title: Public Order and Dangerous Drugs
-        abbr: 
+        abbr:
         head: Panfilo M. Lacson
-        url: 
+        url:
       - title: Public Services
-        abbr: 
+        abbr:
         head: Grace Poe
-        url: 
+        url:
       - title: Public Works
-        abbr: 
+        abbr:
         head: Emmanuel D. Pacquiao
-        url: 
+        url:
       - title: Rules
-        abbr: 
+        abbr:
         head: Vicente C. Sotto III
-        url: 
+        url:
       - title: Science and Technology
-        abbr: 
+        abbr:
         head: Paolo Benigno Aquino IV
-        url: 
+        url:
       - title: Social Justice, Welfare and Rural Development
-        abbr: 
+        abbr:
         head: Cynthia A. Villar
-        url: 
+        url:
       - title: Sports
-        abbr: 
+        abbr:
         head: Emmanuel D. Pacquiao
-        url: 
+        url:
       - title: Tourism
-        abbr: 
+        abbr:
         head: Maria Lourdes Nancy S. Binay
-        url: 
+        url:
       - title: Trade, Commerce and Entrepreneurship
-        abbr: 
+        abbr:
         head: Juan Miguel F. Zubiri
-        url: 
+        url:
       - title: Urban Planning, Housing and Resettlement
-        abbr: 
+        abbr:
         head: Joseph Victor G. Ejercito
-        url: 
+        url:
       - title: Ways and Means
-        abbr: 
+        abbr:
         head: Juan Edgardo M. Angara
-        url: 
+        url:
       - title: Women, Children, Family Relations and Gender Equality
-        abbr: 
+        abbr:
         head: Ana Theresia Hontiveros-Baraquel
-        url: 
+        url:
       - title: Youth
-        abbr: 
+        abbr:
         head: Joel Villanueva
-        url: 
+        url:
       - title: Commission on Appointments
-        abbr: 
+        abbr:
         head: Aquilino Pimentel III
-        url: 
+        url:
       - title: Senate and Electoral Tribunal
-        abbr: 
-        head: 
-        url: 
+        abbr:
+        head:
+        url:
       - title: Judicial and Bar Council
-        abbr: 
+        abbr:
         head: Richard J. Gordon
-        url: 
-        
+        url:
+
   - title: Judiciary
     description: "The Judicial branch holds the power to settle controversies involving rights that are legally demandable and enforceable. This branch determines whether or not there has been a grave abuse of discretion amounting to lack or excess of jurisdiction on the part and instrumentality of the government. It is made up of a Supreme Court and lower courts. The Constitution expressly grants the Supreme Court the power of Judicial Review as the power to declare a treaty, international or executive agreement, law, presidential decree, proclamation, order, instruction, ordinance or regulation unconstitutional."
-    link: /info/gov/judiciary/
+    url: /info/gov/judiciary/
     heads:
-      - title: Chief Justice of the Supreme Court 
+      - title: Chief Justice of the Supreme Court
         head: Ma. Lourdes P. A. Sereno
-        description: 
+        description:
         url: http://sc.judiciary.gov.ph/
     courts:
       - title: Court of Appeals
@@ -375,10 +377,10 @@ branch:
         abbr: CTA
         head:
         url: http://cta.judiciary.gov.ph
-        
+
   - title: Constitutional Commissions
-    description:
-    link: /info/gov/commissions/
+    description: "Article IX of the 1987 Constitution established three independent, fiscally-autonomous commissions: the Civil Service Commission (CSC), the Commission on Elections (COMELEC), and the Commission on Audit (COA). In addition, Article XIII of the constitution and the Administrative Code of 1987 created the Commission on Human Rights (CHR)."
+    url: /info/gov/commissions/
     commissions:
       - title: Civil Service Commission
         abbr: CSC
@@ -390,21 +392,21 @@ branch:
         url: http://www.comelec.gov.ph/
       - title: Commission on Audit
         abbr: COA
-        head: 
+        head:
         url: http://www.coa.gov.ph/
       - title: Commission on Human Rights
         abbr: CHR
-        head: 
+        head:
         url: http://www.chr.gov.ph/
-        
-  - title: Government Agencies
-    description:
-    link: /info/gov/agencies/
+
+  - title: Other Agencies
+    description: Other agencies of the Philippine Government
+    url: /info/gov/agencies/
     agencies:
       - title: Anti-Money Laundering Council
         abbr: AMLC
         head:
-        url: 
+        url:
       - title: Bureau of Customs
         abbr: BOC
         head:
@@ -427,7 +429,7 @@ branch:
         url: https://nbi.gov.ph/
       - title: National Commission on Indigenous Peoples
         abbr: NCIP
-        head: 
+        head:
         url: http://www.ncip.gov.ph/
       - title: National Computer Center
         abbr: NCC
