--- a/_config.yaml
+++ b/_config.yaml
@@ -3,6 +3,8 @@ destination: ./_site
 layouts_dir: ./_layouts
 data_dir:    ./_data
 
+error_mode: warn
+
 # Handling Reading
 redirects:    yes
 safe:         false
