--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -449,3 +449,8 @@
   qauthor: "Rodrigo Roa Duterte"
   qcontext: "On former president Ferdinand E. Marcos burial at Libingan ng mga Bayani"
   qdate:
+  
+- qtext: "If you can't take my jokes then that's your problem."
+  qauthor: "Rodrigo Roa Duterte"
+  qcontext: ""
+  qdate:
