Add foreign media

--- a/_data/media_foreign.yml
+++ b/_data/media_foreign.yml
@@ -54,3 +54,9 @@
 - title: Sputnik News
   description:
   url: https://sputniknews.com/
+- title: China Global Television Network
+  abbr: CGTN
+  description: "China Global Television Network is a multi-language, multi-platform media grouping. It consists of six TV channels – including a 24-hour English-language news channel – a video content provider and a digital media division. Our brand new official website is CGTN.com."
+  url: http://www.cgtn.com/
+- title: TRT World
+  description: "TRT World is the international news platform of the Turkish Radio and Television Corporation based in Istanbul, Turkey. It is Turkey's first English-language international television and digital media news service."
