Fix display of related posts in post layout

--- a/_data/format.yml
+++ b/_data/format.yml
@@ -1,5 +1,6 @@
-long:       "%a %b %d, %Y %I:%M %p %Z"
-same_year:  "%a %d %b %I:%M %p %Z"
-same_day:   "%I:%M %p %Z"
-date_only:  "%a %d %B %Y"
-short_date: "%d %b %Y"
+long:                   "%a %b %d, %Y %I:%M %p %Z"
+same_year:              "%a %d %b %I:%M %p %Z"
+same_day:               "%I:%M %p %Z"
+date_only:              "%a %d %B %Y"
+date_only_long_month:   "%d %B %Y"
+short_date:             "%d %b %Y"
