--- a/_config.yaml
+++ b/_config.yaml
@@ -68,7 +68,7 @@ kramdown:
 sass:
   sass_dir:      _sass
   style:         expanded    # [nested|expanded|compact|compressed]
-#  deploy_style: compressed  # [nested|expanded|compact|compressed]
+  deploy_style:  compressed  # [nested|expanded|compact|compressed]
 
 # Setup
 title:          "Duterte Times"
